--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/virtualized-lists": "^0.74.85",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-redux": "^9.1.2",
+    "stacktrace-parser": "^0.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
